--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@
     width:100vw;
     height:100vh;
     background-size: cover;
+    display:grid;
+    grid-template-columns: repeat(20, 1fr);
+    grid-template-rows: repeat(20,1fr);
 }
 
 .dark-overlay {
@@ -22,26 +25,35 @@
     z-index:0;
 }
 
-.text-box{
-    position:absolute;
-    width:600px;
-    background-color: transparent;
-    height: 500px;
-    z-index:30;
-    margin-top:20%;
-    margin-left:38%;
-    
-}
-
-
-.addbtn{
-    margin-top:10px;
-    margin-left:25%
-}
-
-.text-box h1{
+.displayTitle {
     color:white;
+    font-size:30px;
+    z-index: 30;
+    grid-row: 8/ span 8;
+    grid-column: 8/ span 16;
 }
+
+
+
+.book{
+    color:white;
+    z-index: 30;
+    height:40px;
+    grid-row: 5;
+    grid-column: 10;
+    margin-left:19px;
+    font-size: 90px;
+}
+
+.addbtn {
+    grid-row: 9;
+    grid-column: 10/span 11;
+    margin-top: 30px;
+    width:130px;
+    z-index: 50;
+
+}
+
 
 
 .library-title { /*eventually, add a welcome based on time next to library like medium.com*/
@@ -51,5 +63,27 @@
    width:240px;
    border-radius: 10px;
    border-right: 1px solid #000;
+   z-index: 30;
+   grid-row: 2;
+   grid-column: 2/ span 9;
+   padding:10px;
 }
+
+.afterfunctionbox{
+    width:200px;
+    height:700px;
+    grid-row: 1/ span 20;
+    z-index: 0;
+    background-color: khaki;
+    grid-column: 16/span 20;
+    display:inline-block
+}
+
+.bookcard {
+    width:90%;
+    height:20%;
+    border:2px solid black
+}
+
+/*modal*/
 
