--- a/style.css
+++ b/style.css
@@ -70,20 +70,76 @@
 }
 
 .afterfunctionbox{
-    width:200px;
+    margin-top:30px;
+    width:800px;
     height:700px;
     grid-row: 1/ span 20;
     z-index: 0;
-    background-color: khaki;
-    grid-column: 16/span 20;
-    display:inline-block
+    background-color: rgba(168, 65, 236, 0.308);
+    border: 3px teal solid;
+    border-radius: 40px;
+    grid-column: 7/span 20;
+    display:flex;
+    flex-wrap:wrap;
 }
 
 .bookcard {
-    width:90%;
-    height:20%;
-    border:2px solid black
+    width:30%;
+    height:25%;
+    margin-top: 20px;
+    margin-left:20px;
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.575);
+    border:2px solid black;
+    color:white;
+    padding:5px;
+    flex-wrap: wrap;
+    display: none;
 }
 
-/*modal*/
+.line{
+    fill: black;
+}
 
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    z-index:50;
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+    z-index:60;
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    z-index:60;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+    z-index:60;
+  }
