--- a/style.css
+++ b/style.css
@@ -47,10 +47,12 @@
 
 .addbtn {
     grid-row: 9;
-    grid-column: 10/span 11;
+    grid-column: 10/span 13;
     margin-top: 30px;
     width:130px;
+    height:40px;
     z-index: 50;
+    border-radius: 10px;
 
 }
 
@@ -75,7 +77,7 @@
     height:700px;
     grid-row: 1/ span 15;
     z-index: 6;
-    background-color: rgba(168, 65, 236, 0.308);
+    background-color: #a841ec4f;
     border: 3px teal solid;
     border-radius: 40px;
     grid-column: 7/span 20;
@@ -100,6 +102,35 @@
     fill: black;
 }
 
+.totalbooks {
+    grid-row: 12;
+    color: white;
+    z-index: 30;
+    font-size: 16px;
+    padding:10px;
+    text-align: center;
+    border-radius: 10px;
+    background-color: #8531bd8f;
+    grid-column: 3;
+    display:none;
+}
+
+.totalBox {
+    grid-row: 13;
+    height: 45px;
+    width: 40px;
+    border-radius: 10px;
+    background-color: white;
+    z-index: 50;
+    grid-column: 3;
+    font-size: 26px;
+    text-align: center;
+    margin-left:40px;
+    background-color: #8531bd8f;
+    color:white;
+    display:none;
+}
+
 
 /* The Modal (background) */
 .modal {
@@ -118,7 +149,8 @@
   
   /* Modal Content/Box */
   .modal-content {
-    background-color: #fefefe;
+    background-color: #8531bdfa;
+    color:white;
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
@@ -142,3 +174,5 @@
     cursor: pointer;
     z-index:60;
   }
+
+  
