--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
+:root {
+    --purple-accent: #a841ec4f;
+    --teal-accent: #34cfcf;
+    --lighter-purple-accent: #8531bdfa;
+    --muted-purple: #8531bd8f;
+}
+
+
 *{
     font-family: 'Montserrat', sans-serif;
     font-weight:500;
@@ -34,6 +42,38 @@
 }
 
 
+
+.toggler {
+    width:100px;
+    border-radius: 20px;
+    margin-right: 12px;
+    margin-bottom: 20px;
+    float: left;
+    margin-top: 30px; 
+    transition: 0.2s all;
+}
+.toggler:hover {
+    transform: scale(.95);
+}
+
+.completed {
+    position:absolute;
+   border-radius: 20px;
+    
+}
+
+.scrap {
+    margin-top: 30px;
+    display: inline-block;
+    width:100px;
+    height: 50px;
+    border-radius: 20px;
+    margin-right: 10px;
+    transition: 0.2s all;
+}
+.scrap:hover {
+    transform: scale(.95);
+}
 
 .book{
     color:white;
@@ -77,8 +117,8 @@
     height:700px;
     grid-row: 1/ span 15;
     z-index: 6;
-    background-color: #a841ec4f;
-    border: 3px teal solid;
+    background-color: var(--purple-accent);
+    border: 3px var(--teal-accent) solid;
     border-radius: 40px;
     grid-column: 7/span 20;
     display:none;
@@ -110,7 +150,7 @@
     padding:10px;
     text-align: center;
     border-radius: 10px;
-    background-color: #8531bd8f;
+    background-color: var(--muted-purple);
     grid-column: 3;
     display:none;
 }
@@ -126,7 +166,36 @@
     font-size: 26px;
     text-align: center;
     margin-left:40px;
-    background-color: #8531bd8f;
+    background-color: var(--muted-purple);
+    color:white;
+    display:none;
+}
+
+.readbooks {
+    grid-row: 15;
+    color: white;
+    z-index: 30;
+    font-size: 16px;
+    padding:10px;
+    text-align: center;
+    border-radius: 10px;
+    background-color: var(--muted-purple);
+    grid-column: 3;
+    display:none;
+}
+
+.totalreadbox {
+    grid-row: 16;
+    height: 45px;
+    width: 40px;
+    border-radius: 10px;
+    background-color: white;
+    z-index: 50;
+    grid-column: 3;
+    font-size: 26px;
+    text-align: center;
+    margin-left:40px;
+    background-color: var(--muted-purple);
     color:white;
     display:none;
 }
@@ -149,7 +218,7 @@
   
   /* Modal Content/Box */
   .modal-content {
-    background-color: #8531bdfa;
+    background-color: var(--lighter-purple-accent);
     color:white;
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
