--- a/style.css
+++ b/style.css
@@ -223,8 +223,9 @@
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: 30%; /* Could be more or less, depending on screen size */
     z-index:60;
+    border-radius: 40px;
   }
   
   /* The Close Button */
@@ -244,4 +245,14 @@
     z-index:60;
   }
 
+  #title {
+      margin-left:20px;
+  }
   
+  #pages {
+      margin-left:6px;
+  }
+
+  .titleOne {
+      color:red;
+  }
