--- a/style.css
+++ b/style.css
@@ -1,258 +1,247 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 :root {
-    --purple-accent: #a841ec4f;
-    --teal-accent: #34cfcf;
-    --lighter-purple-accent: #8531bdfa;
-    --muted-purple: #8531bd8f;
+  --purple-accent: #a841ec4f;
+  --teal-accent: #34cfcf;
+  --lighter-purple-accent: #8531bdfa;
+  --muted-purple: #8531bd8f;
 }
 
-
-*{
-    font-family: 'Montserrat', sans-serif;
-    font-weight:500;
+* {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
 }
 
 .page-header {
-    background:url(alfons-morales-YLSwjSy7stw-unsplash.jpg);
-    width:100vw;
-    height:100vh;
-    background-size: cover;
-    display:grid;
-    grid-template-columns: repeat(20, 1fr);
-    grid-template-rows: repeat(20,1fr);
+  background: url(alfons-morales-YLSwjSy7stw-unsplash.jpg);
+  width: 100vw;
+  height: 100vh;
+  background-size: cover;
+  display: grid;
+  grid-template-columns: repeat(20, 1fr);
+  grid-template-rows: repeat(20, 1fr);
 }
 
 .dark-overlay {
-    position:absolute;
-    background-color: black;
-    width:100vw;
-    height: 100vh;
-    opacity:0.8;
-    z-index:0;
+  position: absolute;
+  background-color: black;
+  width: 100vw;
+  height: 100vh;
+  opacity: 0.8;
+  z-index: 0;
 }
 
 .displayTitle {
-    color:white;
-    font-size:30px;
-    z-index: 30;
-    grid-row: 8/ span 8;
-    grid-column: 8/ span 16;
+  color: white;
+  font-size: 30px;
+  z-index: 30;
+  grid-row: 8 / span 8;
+  grid-column: 8 / span 16;
 }
-
-
 
 .toggler {
-    width:100px;
-    border-radius: 20px;
-    margin-right: 12px;
-    margin-bottom: 20px;
-    float: left;
-    margin-top: 30px; 
-    transition: 0.2s all;
+  width: 100px;
+  border-radius: 20px;
+  margin-right: 12px;
+  margin-bottom: 20px;
+  float: left;
+  margin-top: 30px;
+  transition: 0.2s all;
 }
 .toggler:hover {
-    transform: scale(.95);
+  transform: scale(0.95);
 }
 
 .completed {
-    position:absolute;
-   border-radius: 20px;
-    
+  position: absolute;
+  border-radius: 20px;
 }
 
 .scrap {
-    margin-top: 30px;
-    display: inline-block;
-    width:100px;
-    height: 50px;
-    border-radius: 20px;
-    margin-right: 10px;
-    transition: 0.2s all;
+  margin-top: 30px;
+  display: inline-block;
+  width: 100px;
+  height: 50px;
+  border-radius: 20px;
+  margin-right: 10px;
+  transition: 0.2s all;
 }
 .scrap:hover {
-    transform: scale(.95);
+  transform: scale(0.95);
 }
 
-.book{
-    color:white;
-    z-index: 30;
-    height:40px;
-    grid-row: 5;
-    grid-column: 10;
-    margin-left:19px;
-    font-size: 90px;
+.book {
+  color: white;
+  z-index: 30;
+  height: 40px;
+  grid-row: 5;
+  grid-column: 10;
+  margin-left: 19px;
+  font-size: 90px;
 }
 
 .addbtn {
-    grid-row: 9;
-    grid-column: 10/span 13;
-    margin-top: 30px;
-    width:130px;
-    height:40px;
-    z-index: 50;
-    border-radius: 10px;
-
+  grid-row: 9;
+  grid-column: 10 / span 13;
+  margin-top: 30px;
+  width: 130px;
+  height: 40px;
+  z-index: 50;
+  border-radius: 10px;
 }
 
-
-
-.library-title { /*eventually, add a welcome based on time next to library like medium.com*/
-   font-size:43px;
-   color:black;
-   background-color: white;
-   width:240px;
-   border-radius: 10px;
-   border-right: 1px solid #000;
-   z-index: 30;
-   grid-row: 2;
-   grid-column: 2/ span 9;
-   padding:10px;
+.library-title {
+  /*eventually, add a welcome based on time next to library like medium.com*/
+  font-size: 43px;
+  color: black;
+  background-color: white;
+  width: 240px;
+  border-radius: 10px;
+  border-right: 1px solid #000;
+  z-index: 30;
+  grid-row: 2;
+  grid-column: 2 / span 9;
+  padding: 10px;
 }
 
-.afterfunctionbox{
-    margin-top:30px;
-    width:800px;
-    height:700px;
-    grid-row: 1/ span 15;
-    z-index: 6;
-    background-color: var(--purple-accent);
-    border: 3px var(--teal-accent) solid;
-    border-radius: 40px;
-    grid-column: 7/span 20;
-    display:none;
-    flex-wrap:wrap;
+.afterfunctionbox {
+  margin-top: 30px;
+  width: 800px;
+  height: 700px;
+  grid-row: 1 / span 15;
+  z-index: 6;
+  background-color: var(--purple-accent);
+  border: 3px var(--teal-accent) solid;
+  border-radius: 40px;
+  grid-column: 7 / span 20;
+  display: none;
+  flex-wrap: wrap;
 }
 
 .bookcard {
-    width:30%;
-    height:25%;
-    margin-top: 20px;
-    margin-left:20px;
-    border-radius: 10px;
-    background-color: rgba(0, 0, 0, 0.575);
-    border:2px solid black;
-    color:white;
-    padding:5px;
-    display: none;
+  width: 30%;
+  height: 25%;
+  margin-top: 20px;
+  margin-left: 20px;
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.575);
+  border: 2px solid black;
+  color: white;
+  padding: 5px;
+  display: none;
 }
 
-.line{
-    fill: black;
+.line {
+  fill: black;
 }
 
 .totalbooks {
-    grid-row: 12;
-    color: white;
-    z-index: 30;
-    font-size: 16px;
-    padding:10px;
-    text-align: center;
-    border-radius: 10px;
-    background-color: var(--muted-purple);
-    grid-column: 3;
-    display:none;
+  grid-row: 12;
+  color: white;
+  z-index: 30;
+  font-size: 16px;
+  padding: 10px;
+  text-align: center;
+  border-radius: 10px;
+  background-color: var(--muted-purple);
+  grid-column: 3;
+  display: none;
 }
 
 .totalBox {
-    grid-row: 13;
-    height: 45px;
-    width: 40px;
-    border-radius: 10px;
-    background-color: white;
-    z-index: 50;
-    grid-column: 3;
-    font-size: 26px;
-    text-align: center;
-    margin-left:40px;
-    background-color: var(--muted-purple);
-    color:white;
-    display:none;
+  grid-row: 13;
+  height: 45px;
+  width: 40px;
+  border-radius: 10px;
+  background-color: white;
+  z-index: 50;
+  grid-column: 3;
+  font-size: 26px;
+  text-align: center;
+  margin-left: 40px;
+  background-color: var(--muted-purple);
+  color: white;
+  display: none;
 }
 
 .readbooks {
-    grid-row: 15;
-    color: white;
-    z-index: 30;
-    font-size: 16px;
-    padding:10px;
-    text-align: center;
-    border-radius: 10px;
-    background-color: var(--muted-purple);
-    grid-column: 3;
-    display:none;
+  grid-row: 15;
+  color: white;
+  z-index: 30;
+  font-size: 16px;
+  padding: 10px;
+  text-align: center;
+  border-radius: 10px;
+  background-color: var(--muted-purple);
+  grid-column: 3;
+  display: none;
 }
 
 .totalreadbox {
-    grid-row: 16;
-    height: 45px;
-    width: 40px;
-    border-radius: 10px;
-    background-color: white;
-    z-index: 50;
-    grid-column: 3;
-    font-size: 26px;
-    text-align: center;
-    margin-left:40px;
-    background-color: var(--muted-purple);
-    color:white;
-    display:none;
+  grid-row: 16;
+  height: 45px;
+  width: 40px;
+  border-radius: 10px;
+  background-color: white;
+  z-index: 50;
+  grid-column: 3;
+  font-size: 26px;
+  text-align: center;
+  margin-left: 40px;
+  background-color: var(--muted-purple);
+  color: white;
+  display: none;
 }
 
-
-/* The Modal (background) */
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-    z-index:50;
-  }
-  
-  /* Modal Content/Box */
-  .modal-content {
-    background-color: var(--lighter-purple-accent);
-    color:white;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 30%; /* Could be more or less, depending on screen size */
-    z-index:60;
-    border-radius: 40px;
-  }
-  
-  /* The Close Button */
-  .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-    z-index:60;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-    z-index:60;
-  }
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 50;
+}
 
-  #title {
-      margin-left:20px;
-  }
-  
-  #pages {
-      margin-left:6px;
-  }
+.modal-content {
+  background-color: var(--lighter-purple-accent);
+  color: white;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 30%;
+  z-index: 60;
+  border-radius: 40px;
+}
 
-  .titleOne {
-      color:red;
-  }
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  z-index: 60;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+  z-index: 60;
+}
+
+#title {
+  margin-left: 20px;
+}
+
+#pages {
+  margin-left: 6px;
+}
+
+.titleOne {
+  color: red;
+}
