--- a/style.css
+++ b/style.css
@@ -34,6 +34,9 @@
 .displayTitle {
   color: white;
   font-size: 30px;
+  width: 99%;
+  display: block;
+  margin: 0 auto;
   z-index: 30;
   grid-row: 8 / span 8;
   grid-column: 8 / span 16;
@@ -43,31 +46,49 @@
   width: 100px;
   border-radius: 20px;
   margin-right: 12px;
-  margin-bottom: 20px;
+  margin-bottom: 29px;
+
   float: left;
-  margin-top: 30px;
+  height: 50px;
+  padding: 5px;
   transition: 0.2s all;
+  background-color: transparent;
+  color: var(--teal-accent);
+  border: 2px solid var(--teal-accent);
 }
 .toggler:hover {
   transform: scale(0.95);
+  cursor: pointer;
+  background: var(--teal-accent);
+  color: black;
 }
 
 .completed {
-  position: absolute;
+  position: relative;
+  bottom: 110px;
+  display: inline;
   border-radius: 20px;
 }
 
 .scrap {
-  margin-top: 30px;
+  float: left;
+  margin-top: 5px;
   display: inline-block;
   width: 100px;
-  height: 50px;
+  height: 30px;
   border-radius: 20px;
   margin-right: 10px;
   transition: 0.2s all;
+  z-index: 50;
+  background-color: transparent;
+  color: var(--teal-accent);
+  border: 2px solid var(--teal-accent);
 }
 .scrap:hover {
   transform: scale(0.95);
+  cursor: pointer;
+  background: var(--teal-accent);
+  color: black;
 }
 
 .book {
@@ -88,6 +109,16 @@
   height: 40px;
   z-index: 50;
   border-radius: 10px;
+  background-color: transparent;
+  color: var(--teal-accent);
+  border: 2px solid var(--teal-accent);
+  transition: 0.2s all;
+}
+.addbtn:hover {
+  background: var(--teal-accent);
+  cursor: pointer;
+  color: black;
+  transform: scale(0.98);
 }
 
 .library-title {
@@ -129,6 +160,7 @@
   color: white;
   padding: 5px;
   display: none;
+  z-index: 1;
 }
 
 .line {
@@ -205,6 +237,11 @@
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
   z-index: 50;
+}
+
+.title {
+  color: white;
+  font-size: 18px;
 }
 
 .modal-content {
