--- a/style.css
+++ b/style.css
@@ -113,6 +113,7 @@
   color: var(--teal-accent);
   border: 2px solid var(--teal-accent);
   transition: 0.2s all;
+  cursor:pointer;
 }
 .addbtn:hover {
   background: var(--teal-accent);
@@ -290,6 +291,11 @@
   z-index:50;
   position:absolute;
   bottom:0;
+  background: transparent;
+  color: var(--teal-accent);
+  border: 2px solid var(--teal-accent);
+  font-size:20px;
+  grid-row: 2;
 }
 
 @media only screen and (max-width: 600px) {
@@ -303,12 +309,16 @@
     grid-column: 1/ span 3;
     width:100vw;
     height:100px;
+    margin-top:20px;
   }
 
    .book {
     grid-row: 2;
     width:100vw;
     margin-left: 0px;
+    position:relative;
+    top:30px;
+    z-index:1;
     text-align: center;
 
   } 
@@ -327,6 +337,47 @@
   position: relative;
   bottom:100px;
   grid-row: 3;
+}
+
+.modal-content {
+  font-size:12px;
+  width:80vw;
+  grid-column: 1;
+  z-index:75
+}
+.bookform{
+z-index:75;
+}
+
+
+.afterfunctionbox{
+  width:100vw;
+  grid-row: 2;
+  grid-column: 3;
+  height:60vh;
+  background-color: #5e009c;
+  
+
+
+}
+
+.toggler{
+  height:4vh;
+}
+
+.bookcard {
+  font-size:12px;
+  width:40vw;
+  height:20vh;
+}
+
+.clearLS {
+  width:70vw;
+font-size:15px;
+position:absolute;
+right:0;
+bottom:5px;
+border-radius: 10px;
 }
 
 }
