--- a/style.css
+++ b/style.css
@@ -91,6 +91,26 @@
   color: black;
 }
 
+.biggerScrap {
+  position: sticky;
+  margin-right: 20px;
+  display: inline-block;
+  width: 100%;
+  height: 30px;
+  border-radius: 2px;
+  transition: 0.2s all;
+  z-index: 50;
+  background-color: transparent;
+  color: var(--teal-accent);
+  border: 2px solid var(--teal-accent);
+}
+.biggerScrap:hover {
+  transform: scale(0.95);
+  cursor: pointer;
+  background: var(--teal-accent);
+  color: black;
+}
+
 .book {
   color: white;
   z-index: 30;
@@ -113,7 +133,7 @@
   color: var(--teal-accent);
   border: 2px solid var(--teal-accent);
   transition: 0.2s all;
-  cursor:pointer;
+  cursor: pointer;
 }
 .addbtn:hover {
   background: var(--teal-accent);
@@ -162,6 +182,8 @@
   padding: 5px;
   display: none;
   z-index: 1;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .line {
@@ -285,17 +307,40 @@
 }
 
 .clearLS {
-  color:white;
+  color: white;
   font-size: 30px;
-  cursor:pointer;
-  z-index:50;
-  position:absolute;
-  bottom:0;
+  cursor: pointer;
+  z-index: 50;
+  position: absolute;
+  bottom: 0;
   background: transparent;
   color: var(--teal-accent);
   border: 2px solid var(--teal-accent);
-  font-size:20px;
+  font-size: 20px;
   grid-row: 2;
+}
+.clearLS:hover {
+  background: var(--teal-accent);
+  cursor: pointer;
+  color: black;
+  transform: scale(0.98);
+}
+
+.lsItem {
+  background: transparent;
+  color: var(--teal-accent);
+  border: 2px solid var(--teal-accent);
+  position: relative;
+  top: 60px;
+  border-radius: 5px;
+  padding: 2px;
+  text-align: center;
+}
+
+.clearDiv {
+  grid-column: 2;
+  text-align: center;
+  opacity: 0.9;
 }
 
 @media only screen and (max-width: 600px) {
@@ -304,80 +349,75 @@
     grid-template-rows: repeat(3, 1fr);
   }
 
-  .library-title{
+  .library-title {
     grid-row: 1;
-    grid-column: 1/ span 3;
-    width:100vw;
-    height:100px;
-    margin-top:20px;
+    grid-column: 1 / span 3;
+    width: 100vw;
+    height: 100px;
+    margin-top: 20px;
   }
 
-   .book {
+  .book {
     grid-row: 2;
-    width:100vw;
+    width: 100vw;
     margin-left: 0px;
-    position:relative;
-    top:30px;
-    z-index:1;
+    position: relative;
+    top: 30px;
+    z-index: 1;
     text-align: center;
-
-  } 
+  }
 
   .addbtn {
+    grid-row: 3;
+    grid-column: 2 / span 3;
+    width: 100vw;
+  }
 
-      grid-row: 3;
-      grid-column: 2 / span 3;
-      width: 100vw;
-  
-}
+  .displayTitle {
+    width: 100vw;
+    text-align: center;
+    position: relative;
+    bottom: 100px;
+    grid-row: 3;
+  }
 
-.displayTitle {
-  width:100vw;
-  text-align: center;
-  position: relative;
-  bottom:100px;
-  grid-row: 3;
-}
+  .modal-content {
+    font-size: 12px;
+    width: 80vw;
+    grid-column: 1;
+    z-index: 75;
+  }
+  .bookform {
+    z-index: 75;
+  }
 
-.modal-content {
-  font-size:12px;
-  width:80vw;
-  grid-column: 1;
-  z-index:75
-}
-.bookform{
-z-index:75;
-}
+  .afterfunctionbox {
+    width: 100vw;
+    grid-row: 2;
+    grid-column: 3;
+    height: 60vh;
+    background-color: #5e009c;
+  }
 
+  .toggler {
+    height: 4vh;
+  }
 
-.afterfunctionbox{
-  width:100vw;
-  grid-row: 2;
-  grid-column: 3;
-  height:60vh;
-  background-color: #5e009c;
-  
+  .bookcard {
+    font-size: 12px;
+    width: 40vw;
+    height: 20vh;
+  }
 
+  .clearDiv {
+    grid-column: 3;
+  }
 
-}
+  .clearLS {
+    width: 70vw;
+    font-size: 15px;
 
-.toggler{
-  height:4vh;
-}
-
-.bookcard {
-  font-size:12px;
-  width:40vw;
-  height:20vh;
-}
-
-.clearLS {
-  width:70vw;
-font-size:15px;
-position:absolute;
-right:0;
-bottom:5px;
-border-radius: 10px;
-}
-
+    bottom: 5px;
+    border-radius: 10px;
+  }
 }
