--- a/style.css
+++ b/style.css
@@ -343,6 +343,10 @@
   opacity: 0.9;
 }
 
+.error{
+  color:red;
+}
+
 @media only screen and (max-width: 600px) {
   .page-header {
     grid-template-columns: repeat(3, 1fr);
