--- a/style.css
+++ b/style.css
@@ -343,8 +343,8 @@
   opacity: 0.9;
 }
 
-.error{
-  color:red;
+.error {
+  color: red;
 }
 
 @media only screen and (max-width: 600px) {
@@ -358,7 +358,11 @@
     grid-column: 1 / span 3;
     width: 100vw;
     height: 100px;
+    font-size: 60px;
     margin-top: 20px;
+    background: transparent;
+    color: white;
+    text-align: center;
   }
 
   .book {
@@ -418,10 +422,14 @@
   }
 
   .clearLS {
-    width: 70vw;
-    font-size: 15px;
+    display: none;
+  }
 
-    bottom: 5px;
-    border-radius: 10px;
+  .totalbooks {
+    display: none !important;
+  }
+
+  .totalBox {
+    display: none !important;
   }
 }
